--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://kariemseiam.github.io/ramadan-store/" />
     <meta property="og:title" content="متجر رمضان | هدايا رمضان" />
     <meta property="og:description" content="تسوق هدايا رمضان المميزة بما في ذلك سجادات الصلاة، المصاحف، والسبحات. توصيل سريع لجميع مناطق القاهرة." />
-    <meta property="og:image" content="https://kariemseiam.github.io/ramadan-store/og-image.jpg" /> <!-- Replace with actual image URL -->
+    <meta property="og:image" content="https://kariemseiam.github.io/ramadan-store/" /> <!-- Replace with actual image URL -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://kariemseiam.github.io/ramadan-store/" />
     <meta property="twitter:title" content="متجر رمضان | هدايا رمضان" />
     <meta property="twitter:description" content="تسوق هدايا رمضان المميزة بما في ذلك سجادات الصلاة، المصاحف، والسبحات. توصيل سريع لجميع مناطق القاهرة." />
-    <meta property="twitter:image" content="https://kariemseiam.github.io/ramadan-store/og-image.jpg" /> <!-- Replace with actual image URL -->
+    <meta property="twitter:image" content="https://kariemseiam.github.io/ramadan-store/" /> <!-- Replace with actual image URL -->
 
     <!-- Additional SEO Meta Tags -->
     <meta name="keywords" content="متجر رمضان, هدايا رمضان, سجادات الصلاة, مصاحف, سبحات, هدايا إسلامية" />
@@ -38,8 +38,6 @@
     <meta name="geo.position" content="30.0444;31.2357" />
     <meta name="ICBM" content="30.0444, 31.2357" />
 
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="/ramadan-store/assets/site-BhI2VDyC.webmanifest" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
